PureFun/PureFunOof/PureFun-fe/src/test/resources/parser/Valid/Loops.pf
module DataStructures{

    [Int] list = [1,2,3,4]

    fun main() : Int {
        for Int i = 0; i < 4; i += 1 {
            Int res += 1
        }

        for l in list {
            print(l)
        }

        Int x = 0
        while x < 4{
            x++
        }
        return 0
    }
}