PureFun/PureFunOof/PureFun-fe/src/test/resources/parser/Invalid/Branch_no_expression.pf
module DataStructures{

    x Int = 9

    fun main() : Int{
        if {
            print(x)
        }
        return 0
    }
}